@@ -47,6 +47,7 @@ version <next>:
 - CDG demuxer and decoder
 - R210 decoder
 - Auravision Aura 1 and 2 decoders
+- Deluxe Paint Animation playback system
 
 
 
